<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="example.nightfall_of_the_final_conquer.app.home">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="left|bottom">


        <ImageView
            android:layout_width="190dp"
            android:layout_height="265dp"
            android:id="@+id/avatar"
            android:layout_gravity="left|top"
            android:padding="15dp"
            android:background="#000"
            />

        <Button
            android:text="+"
            android:textSize="30sp"
            android:id="@+id/button"
            android:layout_gravity="right|top"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="168dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name_player"
            android:textSize="30sp"
            android:textColor="#000"
            android:gravity="center"
            android:id="@+id/name_player"
            android:layout_gravity="right|top"
            android:layout_marginTop="70dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:layout_width="168dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Stats:\n "
            android:textSize="28sp"
            android:id="@+id/player_stats"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="200dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="HP:"
            android:textSize="20sp"
            android:id="@+id/HP_stat"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="200dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/HP"
            android:textSize="20sp"
            android:id="@+id/HP_stat_value"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="235dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="MP:"
            android:textSize="20sp"
            android:id="@+id/MP_stat"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="285dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/MP"
            android:textSize="20sp"
            android:id="@+id/MP_stat_value"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="325dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="ATK:"
            android:textSize="20sp"
            android:id="@+id/ATK_stat"
            android:layout_marginTop="195dp"
            android:layout_marginLeft="200dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ATK"
            android:textSize="20sp"
            android:id="@+id/ATK_stat_value"
            android:layout_marginTop="195dp"
            android:layout_marginLeft="246dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="DEF:"
            android:textSize="20sp"
            android:id="@+id/DEF_stat"
            android:layout_marginTop="195dp"
            android:layout_marginLeft="285dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/DEF"
            android:textSize="20sp"
            android:id="@+id/DEF_stat_value"
            android:layout_marginTop="195dp"
            android:layout_marginLeft="330dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="SP:"
            android:textSize="20sp"
            android:id="@+id/SP_stat"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="200dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/SP"
            android:textSize="20sp"
            android:id="@+id/SP_stat_value"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="235dp"
            android:textColor="#000" />

        <TextView
            android:layout_marginTop="85dp"
            android:layout_width="380dp"
            android:layout_height="150dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical" />


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="Items"
                    android:textSize="17sp"
                    android:id="@+id/button_item"
                    android:layout_gravity="left|bottom"
                    android:background="#500"
                    android:clickable="true"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="Log"
                    android:textSize="17sp"
                    android:id="@+id/button_log"
                    android:layout_gravity="left|bottom"
                    android:background="#040"
                    android:clickable="true"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="Map"
                    android:textSize="17sp"
                    android:id="@+id/button_map"
                    android:layout_gravity="left|bottom"
                    android:background="#005"
                    android:clickable="true"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="Monsters"
                    android:textSize="17sp"
                    android:id="@+id/button_monsters"
                    android:layout_gravity="left|bottom"
                    android:background="#975"
                    android:clickable="true"
                    android:layout_weight="1"/>


            </LinearLayout>


        </RelativeLayout>


    </FrameLayout>

</FrameLayout>
